--- a/yangcheApp/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/yangcheApp/en.lproj/MainStoryboard_iPhone.storyboard
@@ -74,6 +74,68 @@
             </objects>
             <point key="canvasLocation" x="-146" y="503"/>
         </scene>
+        <!--Global Search View Controller - 搜索-->
+        <scene sceneID="D1S-hi-jHH">
+            <objects>
+                <tableViewController id="CL9-fg-h32" customClass="YCGlobalSearchViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="nT3-1k-jAs">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="搜索服务" id="t99-XI-cLJ">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="CL9-fg-h32" id="6nm-8C-UNp"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="t1e-Lq-41n">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="搜索" id="WkG-CH-EmZ">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="XEN-DM-QUu">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="tailTruncation" id="UOr-Fy-sH9">
+                                <rect key="frame" x="255" y="5" width="60" height="33"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <fontDescription key="fontDescription" name="STHeitiSC-Medium" family="Heiti SC" pointSize="14"/>
+                                <state key="normal" title="在成都">
+                                    <color key="titleColor" red="0.25490197539999998" green="0.63921570780000003" blue="0.91372555489999996" alpha="1" colorSpace="deviceRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="globalSearchBar" destination="t99-XI-cLJ" id="PUG-In-2Bb"/>
+                        <outlet property="searchDisplayController" destination="z6v-8X-0Pp" id="BbT-QG-vYB"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dab-se-1qn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="z6v-8X-0Pp">
+                    <connections>
+                        <outlet property="delegate" destination="CL9-fg-h32" id="CNn-FC-aOr"/>
+                        <outlet property="searchBar" destination="t99-XI-cLJ" id="MMZ-a9-lCz"/>
+                        <outlet property="searchContentsController" destination="CL9-fg-h32" id="DiN-wj-x7T"/>
+                        <outlet property="searchResultsDataSource" destination="CL9-fg-h32" id="atI-ON-xoF"/>
+                        <outlet property="searchResultsDelegate" destination="CL9-fg-h32" id="pmH-6x-xcH"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="329" y="499"/>
+        </scene>
         <!--Home Page View Controller - 首页-->
         <scene sceneID="5">
             <objects>
@@ -330,48 +392,6 @@
             </objects>
             <point key="canvasLocation" x="-637" y="493"/>
         </scene>
-        <!--Global Search View Controller - 我要找-->
-        <scene sceneID="S2n-Hd-yVI">
-            <objects>
-                <viewController id="g7M-Xo-q5X" customClass="YCGlobalSearchViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="v7A-q4-lsP">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="7bb-Wd-7tg">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" showsCancelButton="YES" id="Of6-6Y-joE">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                    <connections>
-                                        <outlet property="delegate" destination="g7M-Xo-q5X" id="uUZ-2q-E7x"/>
-                                    </connections>
-                                </searchBar>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="我要找" id="8uk-AA-Vwc"/>
-                    <connections>
-                        <outlet property="searchBar" destination="Of6-6Y-joE" id="Ptc-8l-44w"/>
-                        <outlet property="searchDisplayController" destination="lqg-0A-ZEf" id="nZR-ch-360"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="UnD-RF-vjf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="lqg-0A-ZEf">
-                    <connections>
-                        <outlet property="delegate" destination="g7M-Xo-q5X" id="5qb-f2-fpi"/>
-                        <outlet property="searchContentsController" destination="g7M-Xo-q5X" id="wNW-IP-R3M"/>
-                        <outlet property="searchResultsDataSource" destination="g7M-Xo-q5X" id="wFQ-ZN-zMh"/>
-                        <outlet property="searchResultsDelegate" destination="g7M-Xo-q5X" id="GPH-TS-XiQ"/>
-                    </connections>
-                </searchDisplayController>
-            </objects>
-            <point key="canvasLocation" x="334" y="503"/>
-        </scene>
         <!--Table View Controller - 更多-->
         <scene sceneID="bq0-3N-rba">
             <objects>
@@ -496,7 +516,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="g7M-Xo-q5X" kind="relationship" relationship="rootViewController" id="c2V-V9-faB"/>
+                        <segue destination="CL9-fg-h32" kind="relationship" relationship="rootViewController" id="Ff7-F2-rnr"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lkd-7k-mg3" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -541,6 +561,37 @@
         <image name="notify_btn" width="16" height="16"/>
         <image name="背景.png" width="640" height="960"/>
     </resources>
+    <classes>
+        <class className="YCGlobalSearchViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCGlobalSearchViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="globalSearchBar" candidateClass="UISearchBar"/>
+            </relationships>
+        </class>
+        <class className="YCHomePageViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCHomePageViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="toggleExtraInfo:" candidateClass="UIButton"/>
+                <relationship kind="action" name="toggleNotifyList:" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="YCMyCenterIndexViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCMyCenterIndexViewController.h"/>
+        </class>
+        <class className="YCMyOrderIndexCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCMyOrderIndexCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="myOrderIndexThumbView" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="YCMyProfileCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/YCMyProfileCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="myProfileNameView" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="myProfileThumbView" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
